[tool.poetry]
name = "sendoff"
version = "0.1.0"
description = ""
authors = ["Yakov Pechersky <ypechersky@treeline.bio>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.3"
tox-poetry-installer = "^0.8.1"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
