[tool.poetry]
name = "sendoff"
version = "0.1.2"
description = "The minimal SDF metadata parser"
authors = ["Yakov Pechersky <ypechersky@treeline.bio>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/pechersky/sendoff"
include = [
    "README.rst",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.910"
isort = {version = "^5.9.3", extras = ["pyproject"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.3"
tox-poetry-installer = "^0.8.1"
flake8 = "^3.9.2"
xdoctest = "^0.15.8"
flake8-docstrings = "^1.6.0"
pydocstyle = "^6.1.1"
black = {version = "^21.9b0", allow-prereleases = true}
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
coverage = "^5.5"
towncrier = "^21.3.0"
pre-commit = "^2.15.0"
flake8-isort = "^4.0.0"
darglint = "^1.8.0"
rdkit-pypi = "^2021.3.5"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc")
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "sendoff"
filename = "doc/changelog.rst"
directory = "newsfragments"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
