[tool.poetry]
name = "sendoff"
version = "0.1.6"
description = "The minimal SDF metadata parser"
authors = ["Yakov Pechersky <ypechersky@treeline.bio>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/pechersky/sendoff"
include = [
    "README.rst",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tox = "^3.24.3"
tox-poetry-installer = "^0.10.3"
flake8 = "^6.1.0"
xdoctest = "^1.1.2"
flake8-docstrings = "^1.7.0"
pydocstyle = "^6.3.0"
black = "^23.11.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
coverage = "^7.3.2"
towncrier = "^23.10.0"
pre-commit = "^3.5.0"
darglint = "^1.8.1"
tbump = "^6.11.0"
mypy = "^1.7.0"
isort = "^5.12.0"
rdkit = "^2022.9.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tbump.version]
current = "0.1.6"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "sendoff/__init__.py"

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc")
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "sendoff"
filename = "doc/changelog.rst"
directory = "newsfragments"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
